[project]
name = "party-service"
version = "0.1.0"
description = "CRUD Microservice for Party data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "alembic>=1.17.0",
    "psycopg2-binary>=2.9.11",
    "flask-smorest>=0.46.2",
    "email-validator>=2.3.0",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "isort>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/integration",
    "tests/unit"
]
addopts = [
    "--import-mode=importlib"
]

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]


[post_write_hooks]
hooks = "pre_commit"
pre_commit.type = "console_scripts"
pre_commit.entrypoint = "pre-commit"
pre_commit.options = "run --files REVISION_SCRIPT_FILENAME"
